syntax = "proto3";

package pb;

// gRPC gateway imports
import "google/api/annotations.proto";
import "pb/token.proto";

message ClientCredentialsCreatedEvent {
    string client_id = 1;
    string client_secret = 2;
    string request_id = 3;
    string partner_attr_id = 4;
    string grant_type = 5;
}

service CilentCredentialsService {
    rpc CreateClientCredentials(ClientCredentialsCreatedEvent) returns (Token) {
        // TODO authenticate the client credentials and return access token
        option (google.api.http) = {
            post: "/oauth2/token"
            body: "*"
        };
    }
}
