syntax = "proto3";

package pb;

// gRPC gateway imports
import "google/api/annotations.proto";

message TokenRetrievedEvent {
    string uuid = 1;
}

message Token {
    string access_token = 1;
    string token_type = 2;
    uint64 expires_in = 3;
    string refresh_token = 4;
    string scope = 5;
    string state = 6;
}

service TokenService {
    rpc RetrieveToken(TokenRetrievedEvent) returns (Token) {
        option (google.api.http) = {
            get: "/token/{uuid}"
        };
    }
}
